@@ -44,6 +44,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/units.hpp"
 #include "libtorrent/aux_/vector.hpp"
 #include "libtorrent/fwd.hpp"
+#include "libtorrent/sha1_hash.hpp" // for sha256_hash
 
 namespace libtorrent {
 
@@ -69,6 +70,12 @@ namespace libtorrent {
 		{ return m_links; }
 
 	private:
+
+		void match_v1(std::shared_ptr<const torrent_info> const& ti
+			, std::string const& save_path);
+		void match_v2(std::shared_ptr<const torrent_info> const& ti
+			, std::string const& save_path);
+
 		// this is the torrent we're trying to find files for.
 		std::shared_ptr<torrent_info> m_torrent_file;
 
@@ -79,6 +86,9 @@ namespace libtorrent {
 
 		// maps file size to file index, in m_torrent_file
 		std::unordered_multimap<std::int64_t, file_index_t> m_file_sizes;
+
+		// maps file root hash to file index, in m_torrent_file
+		std::unordered_multimap<sha256_hash, file_index_t> m_file_roots;
 	};
 #endif // TORRENT_DISABLE_MUTABLE_TORRENTS
 
